--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,8 @@
 body {
   font-family: helvetica, arial, sans-serif;
   max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 #nav {
@@ -9,7 +11,7 @@ body {
   width: 1000%;
   margin-left: -10px;
   margin-top: -10px;
-  height: 50px;
+  height: 45px;
   position: fixed;
 }
 
